--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+ADASYN/synthetic_data_ADASYN.csv filter=lfs diff=lfs merge=lfs -text
